--- a/Library Management/Views/Admin/BookList.cshtml
+++ b/Library Management/Views/Admin/BookList.cshtml
@@ -7,7 +7,7 @@
 <h2 class="text-center">Admin - Manage Books</h2>
 
 <div class="mb-4 text-end">
-    <form action="@Url.Action("","")" method="get" class="d-inline-flex">
+    <form action="@Url.Action("ShowBooks","Book")" method="get" class="d-inline-flex">
         <input type="text" name="search" class="form-control me-2" placeholder="Search by Title or Author" />
         <button type="submit" class="btn btn-outline-secondary">Search</button>
     </form>
