--- a/Library Management/Views/Login/Login.cshtml
+++ b/Library Management/Views/Login/Login.cshtml
@@ -5,7 +5,14 @@
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-md-8 bg-light p-5 rounded-4 shadow">
-            <h4 class="mb-4 text-center">Create an Account</h4>
+            <h4 class="mb-4 text-center">Login To Your Account</h4>
+
+            @if (TempData["Error"] != null)
+            {
+                <div class="alert alert-danger text-center">
+                    @TempData["Error"]
+                </div>
+            }
 
             <form action="@Url.Action("Login","Login")" method="post">
                 <div class="mb-3">
@@ -22,3 +29,7 @@
                     <button type="submit" class="btn btn-primary btn-block">Log In</button>
                 </div>
             </form>
+
+        </div>
+    </div>
+</div>
