--- a/Library Management/Views/Admin/AdminHome.cshtml
+++ b/Library Management/Views/Admin/AdminHome.cshtml
@@ -14,7 +14,7 @@
         Add New Book
     </a>
 
-    <form action="@Url.Action("BookList", "Admin")" method="get" class="d-flex">
+    <form action="@Url.Action("FilterBooks", "Admin")" method="get" class="d-flex">
         <input type="text" name="search" class="form-control me-2" placeholder="Search books..." />
         <button type="submit" class="btn btn-outline-secondary">Search</button>
     </form>
