--- a/Library Management/Views/Home/Index.cshtml
+++ b/Library Management/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-8 bg-light p-5 rounded-4 shadow">
             <h4 class="mb-4 text-center">Create an Account</h4>
 
-            <form action="@Url.Action("signup","SignUp")" method="post">
+            <form action="@Url.Action("SignUp","SignUp")" method="post">
                 <div class="mb-3">
                     <label for="FirstName" class="form-label">First Name</label>
                     <input type="text" name="Firstname" class="form-control" placeholder="First name" required />
